--- a/src/Components/Blog/blog.css
+++ b/src/Components/Blog/blog.css
@@ -1,3 +1,16 @@
+:root {
+  --PrimaryColor: hsl(26,93%,50%);
+  --HoverColor: hsl(26,90%,42%);
+  --whiteColor: hsl(0,0%,100%);
+  --blackColor: hsl(0,0%,18%);
+  --textColor: hsl(240,1%,48%);
+  --whiteColorDeam: hsl(0,0%,93%);
+  --greyBg:hsl(0,0%,96%);
+  --greyText:rgb(190,190,190);
+  --inputColor:hsl(330,12%,97%);
+  /* box-shadow: 0 2px 8px 2px rgba(178,178,178,0.45); */
+}
+
 .blog .mainContainer {
   gap: 1rem;
 }
@@ -22,25 +35,25 @@
      object-fit: cover;
 }
 .blog .mainContainer .singlePost .postDetails h3 {
-  color: hsl(0, 0%, 18%);
+  color: var(--blackColor);
   font-weight: 600;
   padding-bottom: 10px;
 }
 .blog .mainContainer .singlePost .postDetails p {
   font-size: 13px;
-  color: hsl(240, 1%, 48%);
+  color: var(--textColor);
   font-weight: 500;
 }
 .blog .mainContainer .singlePost a {
   font-size: 15px;
-  color: hsl(26, 93%, 50%);
+  color: var(--PrimaryColor);
   font-weight: 600;
   padding-top: 0.5rem;
   width: -moz-max-content;
   width: max-content;
 }
 .blog .mainContainer .singlePost a:hover {
-  color: hsl(26, 90%, 42%);
+  color: var(--HoverColor);
   font-weight: 600;
 }
 .blog .mainContainer .singlePost a:hover .icon {
