--- a/src/Components/Blog/blog.scss
+++ b/src/Components/Blog/blog.scss
@@ -1,15 +1,15 @@
-// :root{
-//     --PrimaryColor: hsl(26,93%,50%); //1
-//     --HoverColor: hsl(26,90%,42%); //1
-//     --whiteColor: hsl(0,0%,100%);
-//     --blackColor: hsl(0,0%,18%); //1
-//     --textColor: hsl(240,1%,48%); //1
-//     --whiteColorDeam: hsl(0,0%,93%);
-//     --greyBg :hsl(0,0%,96%); //1
-//     --greyText:rgb(190,190,190);
-//     --inputColor:hsl(330,12%,97%);
-//     /* box-shadow: 0 2px 8px 2px rgba(178,178,178,0.45); */
-//   }
+:root{
+    --PrimaryColor: hsl(26,93%,50%); //1
+    --HoverColor: hsl(26,90%,42%); //1
+    --whiteColor: hsl(0,0%,100%);
+    --blackColor: hsl(0,0%,18%); //1
+    --textColor: hsl(240,1%,48%); //1
+    --whiteColorDeam: hsl(0,0%,93%);
+    --greyBg :hsl(0,0%,96%); //1
+    --greyText:rgb(190,190,190);
+    --inputColor:hsl(330,12%,97%);
+    /* box-shadow: 0 2px 8px 2px rgba(178,178,178,0.45); */
+  }
 
   .blog{
     .mainContainer{
@@ -38,25 +38,25 @@
             }
             .postDetails{
                 h3{
-                    color: hsl(0,0%,18%);
+                    color: var(--blackColor);
                     font-weight: 600;
                     padding-bottom: 10px;
                 }
                 p{
                     font-size: 13px;
-                    color: hsl(240,1%,48%);
+                    color: var(--textColor);
                     font-weight: 500;
                 }
 
             }
             a{
                 font-size: 15px;
-                color: hsl(26,93%,50%);
+                color: var(--PrimaryColor);
                 font-weight: 600;
                 padding-top: .5rem;
                 width: max-content;
                 &:hover{
-                    color: hsl(26,90%,42%);
+                    color: var(--HoverColor);
                     font-weight: 600;
                     .icon{
                         transform: translateX(10px);
