--- a/src/View/Principal/principal.css
+++ b/src/View/Principal/principal.css
@@ -5,7 +5,7 @@
  box-sizing: border-box;
  font-family: 'Poppins',sans-serif;
 }
-/* :root{
+:root{
   --PrimaryColor: hsl(26,93%,50%);
   --HoverColor: hsl(26,90%,42%);
   --whiteColor: hsl(0,0%,100%);
@@ -16,7 +16,7 @@
   --greyText:rgb(190,190,190);
   --inputColor:hsl(330,12%,97%);
   --box-shadow: 0 2px 8px 2px rgba(178,178,178,0.45); 
-} */
+} 
 a{
  text-decoration: none;
 }
