--- a/src/Components/Fondillo/fondillo.css
+++ b/src/Components/Fondillo/fondillo.css
@@ -1,35 +1,15 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
-/* *{
- padding: 0;
- margin: 0;
- box-sizing: border-box;
- font-family: 'Poppins',sans-serif;
-} */
-:root{
-  --PrimaryColor: hsl(26,93%,50%);
-  --HoverColor: hsl(26,90%,42%);
-  --whiteColor: hsl(0,0%,100%);
-  --blackColor: hsl(0,0%,18%);
-  --textColor: hsl(240,1%,48%);
-  --whiteColorDeam: hsl(0,0%,93%);
-  --greyBg :hsl(0,0%,96%);
-  --greyText:rgb(190,190,190);
-  --inputColor:hsl(330,12%,97%);
-  --box-shadow: 0 2px 8px 2px rgba(178,178,178,0.45); 
-}
-
-
-@keyframes animate {
-  0%{
-      transform: translateY(0) rotate(0deg);
-      opacity: 1;
-      border-radius: 0;
-  }
-  100%{
-      transform: translateY(-1000px) rotate(720deg);
-      opacity: 0;
-      border-radius: 50%;
-  }
+:root {
+  --PrimaryColor: hsl(26, 93%, 50%);
+  --HoverColor: hsl(26, 90%, 42%);
+  --whiteColor: hsl(0, 0%, 100%);
+  --blackColor: hsl(0, 0%, 18%);
+  --textColor: hsl(240, 1%, 48%);
+  --whiteColorDeam: hsl(0, 0%, 93%);
+  --greyBg: hsl(0, 0%, 96%);
+  --greyText: rgb(190, 190, 190);
+  --inputColor: hsl(330, 12%, 97%);
+  --boxShadow: 0 2px 8px 2px rgba(178, 178, 178, 0.334);
+  --Fondo: hsl(175, 53%, 57%);
 }
 
 .fondillo {
@@ -42,11 +22,8 @@
   padding: 0;
   background: #4b51c3;
   overflow: hidden;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-
 }
+
 .fondillo li {
   position: absolute;
   display: block;
@@ -57,9 +34,6 @@
   animation: animate 19s linear infinite;
 }
 
-
-
-
 .fondillo li:nth-child(0) {
   left: 1%;
   width: 192px;
@@ -67,6 +41,7 @@
   bottom: -192px;
   animation-delay: 1s;
 }
+
 .fondillo li:nth-child(1) {
   left: 63%;
   width: 150px;
@@ -74,6 +49,7 @@
   bottom: -150px;
   animation-delay: 3s;
 }
+
 .fondillo li:nth-child(2) {
   left: 21%;
   width: 214px;
@@ -81,6 +57,7 @@
   bottom: -214px;
   animation-delay: 3s;
 }
+
 .fondillo li:nth-child(3) {
   left: 73%;
   width: 219px;
@@ -88,6 +65,7 @@
   bottom: -219px;
   animation-delay: 2s;
 }
+
 .fondillo li:nth-child(4) {
   left: 82%;
   width: 197px;
@@ -95,6 +73,7 @@
   bottom: -197px;
   animation-delay: 12s;
 }
+
 .fondillo li:nth-child(5) {
   left: 24%;
   width: 159px;
@@ -102,6 +81,7 @@
   bottom: -159px;
   animation-delay: 17s;
 }
+
 .fondillo li:nth-child(6) {
   left: 0%;
   width: 243px;
@@ -109,6 +89,7 @@
   bottom: -243px;
   animation-delay: 22s;
 }
+
 .fondillo li:nth-child(7) {
   left: 39%;
   width: 159px;
@@ -116,6 +97,7 @@
   bottom: -159px;
   animation-delay: 26s;
 }
+
 .fondillo li:nth-child(8) {
   left: 45%;
   width: 133px;
@@ -123,6 +105,7 @@
   bottom: -133px;
   animation-delay: 40s;
 }
+
 .fondillo li:nth-child(9) {
   left: 86%;
   width: 159px;
@@ -130,6 +113,7 @@
   bottom: -159px;
   animation-delay: 15s;
 }
+
 .fondillo li:nth-child(10) {
   left: 28%;
   width: 220px;
@@ -137,6 +121,7 @@
   bottom: -220px;
   animation-delay: 33s;
 }
+
 .fondillo li:nth-child(11) {
   left: 75%;
   width: 245px;
@@ -144,6 +129,7 @@
   bottom: -245px;
   animation-delay: 34s;
 }
+
 .fondillo li:nth-child(12) {
   left: 88%;
   width: 158px;
@@ -151,6 +137,7 @@
   bottom: -158px;
   animation-delay: 17s;
 }
+
 .fondillo li:nth-child(13) {
   left: 64%;
   width: 134px;
@@ -158,6 +145,7 @@
   bottom: -134px;
   animation-delay: 53s;
 }
+
 .fondillo li:nth-child(14) {
   left: 18%;
   width: 191px;
@@ -165,6 +153,7 @@
   bottom: -191px;
   animation-delay: 41s;
 }
+
 .fondillo li:nth-child(15) {
   left: 32%;
   width: 227px;
@@ -172,6 +161,7 @@
   bottom: -227px;
   animation-delay: 40s;
 }
+
 .fondillo li:nth-child(16) {
   left: 66%;
   width: 139px;
@@ -179,6 +169,7 @@
   bottom: -139px;
   animation-delay: 5s;
 }
+
 .fondillo li:nth-child(17) {
   left: 39%;
   width: 158px;
@@ -186,6 +177,7 @@
   bottom: -158px;
   animation-delay: 40s;
 }
+
 .fondillo li:nth-child(18) {
   left: 80%;
   width: 209px;
@@ -193,6 +185,7 @@
   bottom: -209px;
   animation-delay: 60s;
 }
+
 .fondillo li:nth-child(19) {
   left: 27%;
   width: 160px;
@@ -200,6 +193,7 @@
   bottom: -160px;
   animation-delay: 85s;
 }
+
 .fondillo li:nth-child(20) {
   left: 1%;
   width: 143px;
@@ -207,6 +201,7 @@
   bottom: -143px;
   animation-delay: 66s;
 }
+
 .fondillo li:nth-child(21) {
   left: 47%;
   width: 122px;
@@ -214,6 +209,7 @@
   bottom: -122px;
   animation-delay: 71s;
 }
+
 .fondillo li:nth-child(22) {
   left: 74%;
   width: 134px;
@@ -221,3 +217,16 @@
   bottom: -134px;
   animation-delay: 55s;
 }
+
+@keyframes animate {
+  0% {
+    transform: translateY(0) rotate(0deg);
+    opacity: 1;
+    border-radius: 0;
+  }
+  100% {
+    transform: translateY(-1000px) rotate(720deg);
+    opacity: 0;
+    border-radius: 50%;
+  }
+}/*# sourceMappingURL=fondillo.css.map */
