--- a/src/Components/QuizCard/quizcard.css
+++ b/src/Components/QuizCard/quizcard.css
@@ -33,7 +33,7 @@
   justify-content: center;
 }
 .card .result {
-  margin: 15%;
+  margin-top: 10%;
   justify-content: center;
 }
 .card .ctn-inicio {
