--- a/src/Components/QuizCard/quizcard.scss
+++ b/src/Components/QuizCard/quizcard.scss
@@ -34,7 +34,7 @@
         justify-content: center;
     }
     .result{
-      margin:15%;
+      margin-top:10%;
       justify-content: center;
     }
 
