--- a/src/Components/QuizCard/quizcard.scss
+++ b/src/Components/QuizCard/quizcard.scss
@@ -17,24 +17,42 @@
 .card {
     width: 60%;
     height: 45%;
-    opacity: 0.9;
+    opacity: 0.85;
     border-radius: 30px;
     background: #e0e0e0;
     box-shadow: 15px 15px 30px #282b63,
     -15px -15px 30px #282b63;
-
     display: grid;
     place-items: center;
     position: relative;
     gap: 10px;
     color: var(--textColor);
-    grid-template-rows: auto 1fr;
+    grid-template-rows: auto auto 1fr;
+
+    .progress-bar {
+      width: 95%;
+      height: 20px;
+      background-color: #f0f0f0;
+      border-radius: 10px;
+      margin-bottom: 10px;
+      margin-top: 20px;
+      overflow: hidden;
+    }
+    
+    .progress {
+      height: 100%;
+      border-radius: 10px;
+      background-color: var(--PrimaryColor); /* Cambia el color de la barra de progreso según tu preferencia */
+      transition: width 0.5s ease;
+    }
     .textin{
-        margin-top: 65px;
+        margin-top: 40px;
+        margin-bottom: 0px;
         justify-content: center;
     }
     .result{
-      margin-top:10%;
+      margin:10%;
+
       justify-content: center;
     }
 
@@ -44,6 +62,7 @@
       grid-template-columns: 1fr;
       justify-content: center;  
       gap: 10px;
+      
       .btn-prueba {
         padding: 17px 40px;
         border-radius: 50px;
@@ -89,8 +108,11 @@
       display: grid;
       grid-template-columns: repeat(3,1fr);
       gap: 10px;
-      margin: 20px;
 
+      margin-top: 0px;
+      margin-bottom: 50px;
+      margin-left: 15px;
+      margin-right: 15px;
       .btn-prueba {
         padding: 17px 40px;
         border-radius: 50px;
