--- a/src/Components/Home/home.css
+++ b/src/Components/Home/home.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 :root {
   --PrimaryColor: hsl(26,93%,50%);
   --HoverColor: hsl(26,90%,42%);
@@ -12,7 +13,7 @@
 
 .home {
   height: 80vh;
-  background: linear-gradient(rgba(33, 33, 33, 0.522), rgba(33, 33, 33, 0.522)), url("../../Assets/bgImage.jpg");
+  background: linear-gradient(rgba(33, 33, 33, 0.522), rgba(33, 33, 33, 0.522));
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
@@ -21,6 +22,7 @@
   justify-content: center;
   margin: auto;
   position: relative;
+  animation: changeBackground 15s infinite; /* 10s es la duración de cada imagen, puedes ajustarla según tus necesidades */
 }
 .home .secContainer .homeText {
   text-align: center;
@@ -139,5 +141,19 @@
   }
   .home .secContainer .homeCard {
     width: 70%;
+  }
+}
+@keyframes changeBackground {
+  0% {
+    background-image: url("../../Assets/image (41).jpg"); /* Cambiar a la primera imagen */
+  }
+  33.33% {
+    background-image: url("../../Assets/image (21).jpg"); /* Cambiar a la segunda imagen */
+  }
+  66.67% {
+    background-image: url("../../Assets/image (1).jpg"); /* Cambiar a la tercera imagen */
+  }
+  100% {
+    background-image: url("../../Assets/bgImage.jpg"); /* Volver a la primera imagen */
   }
 }/*# sourceMappingURL=home.css.map */
