--- a/src/Components/Home/home.css
+++ b/src/Components/Home/home.css
@@ -12,7 +12,7 @@
 
 .home {
   height: 80vh;
-  background: linear-gradient(rgba(33, 33, 33, 0.522), rgba(33, 33, 33, 0.522)), url("../../Assets/bgImage.jpg");
+  background: linear-gradient(rgba(33, 33, 33, 0.522), rgba(33, 33, 33, 0.522)), url("../../Assets/bgImage.webp");
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
