--- a/src/Components/Popular/popular.css
+++ b/src/Components/Popular/popular.css
@@ -48,10 +48,12 @@
   color: var(--blackColor);
 }
 .popular .secContainer .mainContent {
+  width: 100%;
   padding: 2rem 0;
   gap: 1rem;
 }
 .popular .secContainer .mainContent .singleDestination {
+  width: 100%;
   overflow: hidden;
   border-radius: 1rem;
   box-shadow: 0 2px 8px 2px rgba(178, 178, 178, 0.334);
