--- a/src/Components/Popular/popular.scss
+++ b/src/Components/Popular/popular.scss
@@ -56,9 +56,12 @@
             }
         }
         .mainContent{
+            
+            width: 100%;
             padding: 2rem 0;
             gap: 1rem;
             .singleDestination{
+                width: 100%;
                 overflow: hidden;
                 border-radius: 1rem;
                 box-shadow:0 2px 8px 2px rgba(178,178,178,0.334);
