--- a/src/View/Encuenta/encuenta.css
+++ b/src/View/Encuenta/encuenta.css
@@ -1,42 +1,30 @@
+@import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
 
-@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
-/* *{
- padding: 0;
- margin: 0;
- box-sizing: border-box;
- font-family: 'Poppins',sans-serif;
-} */
-:root{
-  --PrimaryColor: hsl(26,93%,50%);
-  --HoverColor: hsl(26,90%,42%);
-  --whiteColor: hsl(0,0%,100%);
-  --blackColor: hsl(0,0%,18%);
-  --textColor: hsl(240,1%,48%);
-  --whiteColorDeam: hsl(0,0%,93%);
-  --greyBg :hsl(0,0%,96%);
-  --greyText:rgb(190,190,190);
-  --inputColor:hsl(330,12%,97%);
-  --box-shadow: 0 2px 8px 2px rgba(178,178,178,0.45); 
+:root {
+  --PrimaryColor: hsl(26, 93%, 50%);
+  --HoverColor: hsl(26, 90%, 42%);
+  --whiteColor: hsl(0, 0%, 100%);
+  --blackColor: hsl(0, 0%, 18%);
+  --textColor: hsl(240, 1%, 48%);
+  --whiteColorDeam: hsl(0, 0%, 93%);
+  --greyBg: hsl(0, 0%, 96%);
+  --greyText: rgb(190, 190, 190);
+  --inputColor: hsl(330, 12%, 97%);
+  --box-shadow: 0 2px 8px 2px rgba(178, 178, 178, 0.45);
 }
-
-
-
-
 
 @keyframes animate {
-  0%{
-      transform: translateY(0) rotate(0deg);
-      opacity: 1;
-      border-radius: 0;
+  0% {
+    transform: translateY(0) rotate(0deg);
+    opacity: 1;
+    border-radius: 0;
   }
-  100%{
-      transform: translateY(-1000px) rotate(720deg);
-      opacity: 0;
-      border-radius: 50%;
+  100% {
+    transform: translateY(-1000px) rotate(720deg);
+    opacity: 0;
+    border-radius: 50%;
   }
 }
-
-
 
 .fondillo {
   position: fixed;
@@ -51,7 +39,6 @@
   display: flex;
   justify-content: center;
   align-items: center;
-
 }
 .fondillo li {
   position: absolute;
@@ -62,9 +49,6 @@
   background: rgba(255, 255, 255, 0.2);
   animation: animate 19s linear infinite;
 }
-
-
-
 
 .fondillo li:nth-child(0) {
   left: 1%;
