--- a/src/Components/About/about.css
+++ b/src/Components/About/about.css
@@ -1,6 +1,6 @@
 :root {
-  --PrimaryColor: hsl(26,93%,50%);
-  --HoverColor: hsl(26,90%,42%);
+  --PrimaryColor: hsl(180, 96%, 38%);
+  --HoverColor: hsl(186, 96%, 38%);
   --whiteColor: hsl(0,0%,100%);
   --blackColor: hsl(0,0%,18%);
   --textColor: hsl(240,1%,48%);
@@ -26,9 +26,9 @@
 }
 .about .secContainer .mainContent .singleItem img {
   background: rgba(247, 144, 54, 0.265);
-  width: 100px;
+  width: 120px;
   border-radius: 50%;
-  padding: 1rem;
+  padding: 0.5rem;
 }
 .about .secContainer .mainContent .singleItem h3 {
   font-weight: 700;
@@ -43,7 +43,7 @@
 }
 .about .secContainer .videoCard {
   margin-top: 2rem;
-  background: linear-gradient(to top, rgba(0, 0, 0, 0.73), rgba(0, 0, 0, 0.609)), url(../../Assets/map.jpg);
+  background: linear-gradient(to top, rgba(0, 0, 0, 0.73), rgba(0, 0, 0, 0.609)), url(../../Assets/arena.webp);
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
