--- a/src/Components/Blog/blog.scss
+++ b/src/Components/Blog/blog.scss
@@ -1,6 +1,6 @@
 :root{
-    --PrimaryColor: hsl(26,93%,50%); //1
-    --HoverColor: hsl(26,90%,42%); //1
+    --PrimaryColor: hsl(180, 96%, 38%); //1
+    --HoverColor: hsl(186, 96%, 38%); //1
     --whiteColor: hsl(0,0%,100%);
     --blackColor: hsl(0,0%,18%); //1
     --textColor: hsl(240,1%,48%); //1
