--- a/src/Components/Footer/footer.scss
+++ b/src/Components/Footer/footer.scss
@@ -1,7 +1,7 @@
 
 :root{
-    --PrimaryColor: hsl(26,93%,50%);
-    --HoverColor: hsl(26,90%,42%);
+    --PrimaryColor: hsl(180, 96%, 38%);
+    --HoverColor: hsl(186, 96%, 38%);
     --whiteColor: hsl(0,0%,100%);
     --blackColor: hsl(0,0%,18%);
     --textColor: hsl(240,1%,48%);
