--- a/src/Components/Home/home.css
+++ b/src/Components/Home/home.css
@@ -1,7 +1,7 @@
 @charset "UTF-8";
 :root {
-  --PrimaryColor: hsl(26,93%,50%);
-  --HoverColor: hsl(26,90%,42%);
+  --PrimaryColor: hsl(180, 96%, 38%);
+  --HoverColor: hsl(186, 96%, 38%);
   --whiteColor: hsl(0,0%,100%);
   --blackColor: hsl(0,0%,18%);
   --textColor: hsl(240,1%,48%);
@@ -145,15 +145,15 @@
 }
 @keyframes changeBackground {
   0% {
-    background-image: url("../../Assets/image (41).jpg"); /* Cambiar a la primera imagen */
+    background-image: url("../../Assets/portada1.webp"); /* Cambiar a la primera imagen */
   }
   33.33% {
-    background-image: url("../../Assets/image (21).jpg"); /* Cambiar a la segunda imagen */
+    background-image: url("../../Assets/portada4.webp"); /* Cambiar a la segunda imagen */
   }
   66.67% {
-    background-image: url("../../Assets/image (1).jpg"); /* Cambiar a la tercera imagen */
+    background-image: url("../../Assets/paracasport.webp"); /* Cambiar a la tercera imagen */
   }
   100% {
-    background-image: url("../../Assets/bgImage.jpg"); /* Volver a la primera imagen */
+    background-image: url("../../Assets/imageee.webp"); /* Volver a la primera imagen */
   }
 }/*# sourceMappingURL=home.css.map */
