--- a/src/Components/Navbar/navbar.css
+++ b/src/Components/Navbar/navbar.css
@@ -1,9 +1,10 @@
 :root {
-  --PrimaryColor: hsl(26,93%,50%);
-  --HoverColor: hsl(26,90%,42%);
+  --PrimaryColor: hsl(180, 96%, 38%);
+  --HoverColor: hsl(186, 96%, 38%);
   --whiteColor: hsl(0,0%,100%);
   --blackColor: hsl(0,0%,18%);
   --textColor: hsl(240,1%,48%);
+  --navbar: hsl(180, 96%, 18%);
   --whiteColorDeam: hsl(0,0%,93%);
   --greyBg:hsl(0,0%,96%);
   --greyText:rgb(190,190,190);
@@ -29,7 +30,7 @@
 }
 .navBarSection .header .logoDiv .logo .icon {
   color: var(--PrimaryColor);
-  font-size: 25px;
+  font-size: 45px;
   margin-right: 10px;
 }
 @media screen and (max-width: 768px) {
@@ -109,7 +110,7 @@
   color: var(--PrimaryColor);
 }
 .navBarSection .activeHeader {
-  background: var(--greyText);
+  background: var(--navbar);
   box-shadow: 0 2px 8px 2px rgba(178, 178, 178, 0.45);
 }
 
