--- a/src/Components/Offers/offers.css
+++ b/src/Components/Offers/offers.css
@@ -1,6 +1,6 @@
 :root {
-  --PrimaryColor: hsl(26,93%,50%);
-  --HoverColor: hsl(26,90%,42%);
+  --PrimaryColor: hsl(180, 96%, 38%);
+  --HoverColor: hsl(186, 96%, 38%);
   --whiteColor: hsl(0,0%,100%);
   --blackColor: hsl(0,0%,18%);
   --textColor: hsl(240,1%,48%);
@@ -9,6 +9,7 @@
   --greyText:rgb(190,190,190);
   --inputColor:hsl(330,12%,97%);
   --box-shadow: box-shadow:0 2px 8px 2px rgba(178,178,178,0.45);
+  --Promocion: hsl(33, 41%, 57%);
 }
 
 .offer .secContainer .mainContent {
@@ -43,7 +44,7 @@
   top: 10px;
   right: 10px;
   padding: 5px 10px;
-  background: var(--PrimaryColor);
+  background: var(--Promocion);
   color: var(--whiteColor);
   border-radius: 3rem;
   font-size: 10px;
@@ -62,7 +63,7 @@
 }
 .offer .secContainer .mainContent .singleOffer .offerBody .price .status {
   padding: 5px 10px;
-  color: var(--HoverColor);
+  color: var(--Promocion);
   background: var(--greyBg);
   font-size: 10px;
   font-weight: 600;
