--- a/src/Components/QuizCard/quizcard.css
+++ b/src/Components/QuizCard/quizcard.css
@@ -1,7 +1,7 @@
 @charset "UTF-8";
 :root {
-  --PrimaryColor: hsl(26,93%,50%);
-  --HoverColor: hsl(26,90%,42%);
+  --PrimaryColor: hsl(180, 96%, 38%);
+  --HoverColor: hsl(186, 96%, 38%);
   --whiteColor: hsl(0,0%,100%);
   --blackColor: hsl(0,0%,18%);
   --textColor: hsl(240,1%,48%);
@@ -194,8 +194,8 @@
   }
 }
 :root {
-  --PrimaryColor: hsl(26, 93%, 50%);
-  --HoverColor: hsl(26, 90%, 42%);
+  --PrimaryColor: hsl(180, 96%, 38%);
+  --HoverColor: hsl(186, 96%, 38%);
   --whiteColor: hsl(0, 0%, 100%);
   --blackColor: hsl(0, 0%, 18%);
   --textColor: hsl(240, 1%, 48%);
@@ -214,8 +214,8 @@
   height: 40%;
   opacity: 0.85;
   border-radius: 30px;
-  background: #e0e0e0;
-  box-shadow: 15px 15px 30px #282b63, -15px -15px 30px #282b63;
+  background: #f0ebe4;
+  box-shadow: 15px 15px 30px rgba(3, 162, 173, 0.6039215686), -15px -15px 30px rgba(3, 162, 173, 0.6039215686);
   display: grid;
   place-items: center;
   position: relative;
