--- a/src/Components/QuizCard/quizcard.scss
+++ b/src/Components/QuizCard/quizcard.scss
@@ -1,8 +1,8 @@
 @import "../Popular/popular.scss";
 
 :root {
-    --PrimaryColor: hsl(26, 93%, 50%);
-    --HoverColor: hsl(26, 90%, 42%);
+    --PrimaryColor: hsl(180, 96%, 38%);
+    --HoverColor: hsl(186, 96%, 38%);
     --whiteColor: hsl(0, 0%, 100%);
     --blackColor: hsl(0, 0%, 18%);
     --textColor: hsl(240, 1%, 48%);
@@ -21,9 +21,9 @@
     height: 40%;
     opacity: 0.85;
     border-radius: 30px;
-    background: #e0e0e0;
-    box-shadow: 15px 15px 30px #282b63,
-    -15px -15px 30px #282b63;
+    background: #f0ebe4;
+    box-shadow: 15px 15px 30px #03a2ad9a,
+    -15px -15px 30px #03a2ad9a;
     display: grid;
     place-items: center;
     position: relative;
