--- a/src/View/Encuenta/encuenta.css
+++ b/src/View/Encuenta/encuenta.css
@@ -34,7 +34,7 @@
   left: 0;
   margin: 0;
   padding: 0;
-  background: #4b51c3;
+  background: #a1c3c5;
   overflow: hidden;
   display: flex;
   justify-content: center;
@@ -46,7 +46,7 @@
   list-style: none;
   width: 20px;
   height: 20px;
-  background: rgba(255, 255, 255, 0.2);
+  background: rgba(255, 255, 255, 0.322);
   animation: animate 19s linear infinite;
 }
 
