--- a/src/View/Principal/principal.css
+++ b/src/View/Principal/principal.css
@@ -6,7 +6,7 @@
  font-family: 'Poppins',sans-serif;
 }
 :root{
-  --PrimaryColor: hsl(26,93%,50%);
+  --PrimaryColor: hsl(180, 96%, 38%);
   --HoverColor: hsl(26,90%,42%);
   --whiteColor: hsl(0,0%,100%);
   --blackColor: hsl(0,0%,18%);
