--- a/src/Components/slider/slider.css
+++ b/src/Components/slider/slider.css
@@ -1,1 +1,69 @@
-/*# sourceMappingURL=slider.css.map */
+.slider {
+  width: 100%;
+  height: 350px;
+  display: flex;
+  gap: 20px;
+}
+.slider .fullSlider {
+  position: absolute;
+  width: 100vw;
+  height: 100vh;
+  top: 0;
+  left: 0;
+  background-color: black;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.slider .fullSlider .arrow {
+  flex: 1;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.slider .fullSlider .arrow img {
+  width: 50px;
+}
+.slider .fullSlider .arrow img.right {
+  transform: rotate(180deg);
+}
+.slider .fullSlider .imgContainer {
+  flex: 10;
+}
+.slider .fullSlider .imgContainer img {
+  width: 100%;
+  height: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+.slider .fullSlider .close {
+  position: absolute;
+  top: 0;
+  right: 0;
+  color: white;
+  font-size: 36px;
+  font-weight: bold;
+  padding: 50px;
+  cursor: pointer;
+}
+.slider img {
+  width: 100%;
+  height: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
+  border-radius: 10px;
+  cursor: pointer;
+}
+.slider .bigImage {
+  flex: 3;
+}
+.slider .smallImages {
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  gap: 20px;
+}
+.slider .smallImages img {
+  height: 100px;
+}/*# sourceMappingURL=slider.css.map */
