--- a/src/View/singlePage/singlePage.css
+++ b/src/View/singlePage/singlePage.css
@@ -1,16 +1,53 @@
 .singlePage {
   display: flex;
   height: 100%;
+  width: 90%;
+  margin-left: 5%;
+}
+@media (max-width: 1024px) {
+  .singlePage {
+    flex-direction: column;
+    overflow: scroll;
+  }
 }
 .singlePage .details {
   flex: 3;
+  height: 100%;
+  overflow-y: scroll;
+}
+@media (max-width: 1024px) {
+  .singlePage .details {
+    flex: none;
+    height: -moz-max-content;
+    height: max-content;
+    margin-bottom: 50px;
+  }
 }
 .singlePage .details .wrapper {
   padding-right: 50px;
 }
+@media (max-width: 1366px) {
+  .singlePage .details .wrapper {
+    padding-right: 20px;
+  }
+}
+@media (max-width: 1024px) {
+  .singlePage .details .wrapper {
+    padding-right: 0px;
+  }
+}
+.singlePage .details .wrapper .info {
+  margin-top: 50px;
+}
 .singlePage .details .wrapper .info .top {
   display: flex;
   justify-content: space-between;
+}
+@media (max-width: 738px) {
+  .singlePage .details .wrapper .info .top {
+    flex-direction: column;
+    gap: 20px;
+  }
 }
 .singlePage .details .wrapper .info .top .post {
   display: flex;
@@ -22,7 +59,7 @@
 }
 .singlePage .details .wrapper .info .top .post .address {
   display: flex;
-  gap: 50px;
+  gap: 5px;
   align-items: center;
   color: #888;
   font-size: 14px;
@@ -51,6 +88,11 @@
   background-color: rgba(254, 205, 81, 0.209);
   font-weight: 600;
 }
+@media (max-width: 738px) {
+  .singlePage .details .wrapper .info .top .user {
+    padding: 20px 50px;
+  }
+}
 .singlePage .details .wrapper .info .top .user img {
   width: 50px;
   height: 50px;
@@ -66,7 +108,102 @@
 .singlePage .features {
   flex: 2;
   background-color: #fcf5f3;
+  height: 100%;
+  overflow-y: scroll;
+}
+@media (max-width: 1024px) {
+  .singlePage .features {
+    flex: none;
+    height: -moz-max-content;
+    height: max-content;
+    margin-bottom: 50px;
+  }
 }
 .singlePage .features .wrapper {
   padding: 0px 20px;
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+}
+@media (max-width: 1024px) {
+  .singlePage .features .wrapper {
+    padding: 20px;
+  }
+}
+.singlePage .features .wrapper img {
+  width: 24px;
+  height: 24px;
+}
+.singlePage .features .wrapper .title {
+  font-weight: bold;
+  font-size: 18px;
+  margin-bottom: 10px;
+}
+.singlePage .features .wrapper .feature {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+}
+.singlePage .features .wrapper .feature img {
+  background-color: rgba(254, 205, 81, 0.209);
+}
+.singlePage .features .wrapper .feature .featureText span {
+  font-weight: bold;
+}
+.singlePage .features .wrapper .feature .featureText p {
+  font-size: 14px;
+}
+.singlePage .features .wrapper .listVertical {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+  padding: 20px 10px;
+  background-color: white;
+  border-radius: 10px;
+}
+.singlePage .features .wrapper .listHorizontal {
+  display: flex;
+  justify-content: space-between;
+  padding: 20px 10px;
+  background-color: white;
+  border-radius: 10px;
+}
+.singlePage .features .wrapper .sizes {
+  display: flex;
+  justify-content: space-between;
+}
+@media (max-width: 1366px) {
+  .singlePage .features .wrapper .sizes {
+    font-size: 12px;
+  }
+}
+.singlePage .features .wrapper .sizes .size {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+  background-color: white;
+  padding: 10px;
+  border-radius: 5px;
+}
+.singlePage .features .wrapper .mapContainer {
+  width: 100%;
+  height: 200px;
+}
+.singlePage .features .wrapper .buttons {
+  display: flex;
+  justify-content: space-between;
+}
+.singlePage .features .wrapper .buttons button {
+  padding: 20px;
+  display: flex;
+  align-items: center;
+  gap: 5px;
+  background-color: white;
+  border: 1px solid #fece51;
+  border-radius: 5px;
+  cursor: pointer;
+}
+.singlePage .features .wrapper .buttons button img {
+  width: 16px;
+  height: 16px;
 }/*# sourceMappingURL=singlePage.css.map */
