se hizo el responsive al quiz

--- a/src/Components/About/about.css
+++ b/src/Components/About/about.css
@@ -43,7 +43,7 @@
 }
 .about .secContainer .videoCard {
   margin-top: 2rem;
-  background: linear-gradient(to top, rgba(0, 0, 0, 0.73), rgba(0, 0, 0, 0.609)), url(../../Assets/arena.webp);
+  background: linear-gradient(to top, rgba(0, 0, 0, 0.73), rgba(0, 0, 0, 0.609)), url(../../Assets/imageee.webp);
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
