--- a/src/Components/About/about.scss
+++ b/src/Components/About/about.scss
@@ -46,7 +46,7 @@
 
         .videoCard{
             margin-top: 2rem;
-            background: linear-gradient(to top,rgba(0,0,0,0.73),rgba(0,0,0,0.609)),url(../../Assets/arena.webp);
+            background: linear-gradient(to top,rgba(0,0,0,0.73),rgba(0,0,0,0.609)),url(../../Assets/imageee.webp);
             background-position: center;
             background-size: cover;
             background-repeat: no-repeat;
