--- a/src/Components/QuizCard/quizcard.scss
+++ b/src/Components/QuizCard/quizcard.scss
@@ -17,8 +17,9 @@
 }
 
 .card {
-    width: 55%;
-    height: 40%;
+    width: 90%;
+    max-width: 900px;
+    height: auto;
     opacity: 0.85;
     border-radius: 30px;
     background: #f0ebe4;
@@ -31,6 +32,10 @@
     color: var(--textColor);
     grid-template-rows: auto auto auto;
 
+    @media screen and (max-width: 768px) { 
+      width: 100%; 
+      max-width: none; 
+    }
     .progress-bar {
       width: 95%;
       height: 20px;
@@ -92,18 +97,6 @@
         }
       }
     }
-
-
-
-
-
-
-
-
-
-
-
-
 
 
     .ctn-button {
